# obs-cloud-container

./: Dockerfile  README.md  SOURCE-PROFILER-WEBSOCKET-PLAN.md  docker-compose.yml  entrypoint.sh  obs-go-live-autoconfirm.sh  rc.xml  xorg.conf.template
.github/workflows/: publish.yml
golden-config/obs-studio/: global.ini  user.ini
golden-config/obs-studio/basic/profiles/Appliance/: basic.ini
golden-config/obs-studio/basic/profiles/StreamWizard/: basic.ini
golden-config/obs-studio/basic/scenes/: StreamWizard.json
host-plugins/: README.md
plugin/: CMakeLists.txt
plugin/src/: lockdown-plugin.cpp
